Fixed svg being a little too big on narrowish screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4177,7 +4177,7 @@ h6.caps {
 
 @media(max-width: 991px) {
 	#block svg {
-		width: 150%;
+		width: 130%;
 	}
 }
 
